RESOLVED FIXED285768
[GTK][WPE][Skia] Visiting wpewebkit.org with Skia/CPU rendering fires assertion
https://bugs.webkit.org/show_bug.cgi?id=285768
Summary [GTK][WPE][Skia] Visiting wpewebkit.org with Skia/CPU rendering fires assertion
Nikolas Zimmermann
Reported 2025-01-10 12:55:06 PST
WebCore::PlatformDisplay::skiaGrContext() asserts that s_skiaGLContext is available -- which is not the case for Skia/CPU backend. A codepath called skiaGrContext() in Unaccelerated rendering mode, which the assertion caught -- fix that.
Attachments
Nikolas Zimmermann
Comment 1 2025-01-10 12:57:34 PST
EWS
Comment 2 2025-01-12 15:33:19 PST
Committed 288778@main (1021b2c0a05a): <https://commits.webkit.org/288778@main> Reviewed commits have been landed. Closing PR #38864 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.